<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
    android:id="@+id/navigation_menu_home"
    android:title="@string/home"
    android:orderInCategory="100"
    android:icon="@drawable/ic_baseline_home_24">

</item>
    <item
    android:id="@+id/navigation_menu_profile"
    android:title="@string/profile"
    android:orderInCategory="100"
    android:icon="@drawable/ic_baseline_person_24">

</item>
    <item
        android:id="@+id/navigation_menu_about"

        android:title="@string/about_us"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_home_24">
    </item>
    <item
        android:id="@+id/navigation_menu_contact"
        android:title="@string/contact_us"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_chat_24">
    </item>
    <item
        android:id="@+id/navigation_menu_setting"
        android:title="@string/setting"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_settings_24">
    </item>
    <item
        android:title="@string/logout"
        android:id="@+id/navigation_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_logout_24">
    </item>
</menu>