<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_access.login"
    android:background="?attr/background_color">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/login_appbar_main"
        android:background="?attr/color3"
        app:titleTextColor="?attr/textcolor"
        app:title="Visit us"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background_color"
        android:layout_below="@id/login_appbar_main">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:background="?attr/background_color"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_below="@+id/imageView_view"
                android:layout_gravity="center"
                android:background="?attr/background_color"
                >
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:id="@+id/email_edittext"
                    android:textColor="?attr/textcolor"
                    android:textColorHint="?attr/textcolor"
                    android:background="@drawable/edittext_shape"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:hint="@string/email"
                    android:ems="10"/>

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:id="@+id/email_password_text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:paddingStart="10dp"
                    android:drawablePadding="10dp"
                    android:background="@drawable/edittext_shape"
                    android:padding="5dp"
                    android:drawableStart="@drawable/ic_baseline_lock_24"

                    android:ems="10"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    >

                    <TextView android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@string/show_password"
                        android:gravity="center|start"
                        android:textColor="?attr/textcolor"
                        android:layout_weight="1"
                        android:textSize="14sp">
                    </TextView>

                    <CheckBox android:layout_height="match_parent"
                        android:layout_width="50dp"
                        android:id="@+id/show_password_login"
                        android:layout_weight="1">
                    </CheckBox>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:id="@+id/login"
                    android:layout_gravity="center"
                    android:textColor="?attr/textcolor"
                    android:textSize="18sp"
                    android:background="?attr/color2"
                    android:text="@string/login"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/new_account"
                    android:textColor="?attr/textcolor"
                    android:gravity="center"
                    android:text="@string/create_new_account"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/forgit_password"
                    android:textColor="?attr/textcolor"
                    android:text="@string/forget_password"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>