<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_access.registration"
    android:orientation="vertical"
    android:background="?attr/background_color">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/login_appbar_main"
        android:background="@color/color2"
        app:titleTextColor="?attr/textcolor"
        app:title="Visit us"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:id="@+id/cardview"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="?attr/background_color"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:layout_below="@+id/imageView_view"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    >

                    <EditText
                        android:id="@+id/email_registration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/edittext_shape"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:padding="10dp"
                        android:textColor="?attr/textcolor"
                        android:textColorHint="?attr/textcolor"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/email_registration"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/password_registration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/email_registration"
                            android:layout_margin="10dp"
                            android:background="@drawable/edittext_shape"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:drawablePadding="5dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="10dp"

                            android:textColor="?attr/textcolor"
                            android:textColorHint="?attr/textcolor"

                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/confirm"
                        android:layout_below="@id/password">

                        <EditText
                            android:id="@+id/confirm_registration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"

                            android:textColor="?attr/textcolor"
                            android:inputType="textPassword"
                            android:hint="@string/confirm_password"
                            android:drawableStart="@drawable/ic_baseline_lock_24"
                            android:textColorHint="?attr/textcolor"
                            android:drawablePadding="5dp"
                            android:layout_below="@id/password_registration"
                            android:background="@drawable/edittext_shape"
                            android:textSize="18sp"
                            android:padding="10dp"
                            android:layout_margin="10dp"/>


                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/show"
                        android:layout_below="@id/confirm">

                    <TextView android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:text="@string/show_password"
                        android:gravity="center|start"
                        android:textColor="?attr/textcolor"
                        android:layout_weight="1"
                        android:textSize="14sp">
                    </TextView>

                    <CheckBox android:layout_height="match_parent"
                        android:layout_width="50dp"
                        android:id="@+id/show_password_regist"
                        android:layout_weight="1">
                    </CheckBox>

                </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/registration_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/show"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"

                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"

                        android:textColor="?attr/textcolor"

                        android:background="?attr/color2"
                        android:text="@string/registration"
                        android:textAllCaps="false"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/registration_button"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/return_to_login"
                        android:text="@string/do_you_have_account_login"
                        android:textColor="?attr/textcolor"
                        />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>