<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.add_touristic_places">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/a_appbar_main"
        android:background="@color/color3"
        app:titleTextColor="@color/white"
        app:title="Visit us"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@id/a_appbar_main"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            >
                <TextView
                    android:id="@+id/add_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/city"
                    android:textColor="@color/color1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/add_city_txt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:background="@drawable/recycler_shape"
                    />

                <TextView
                    android:id="@+id/add_place_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/place_name"
                    android:textSize="20sp"
                    android:textColor="@color/color1"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/choose_service_spinner" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_place_edt_text"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_place_txt">

                    <EditText
                        android:id="@+id/input_add_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/recycler_shape"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/about_place_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/about_place"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/color1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_place_edt_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/about_add_place_edt"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_place_txt">

                    <EditText
                        android:id="@+id/input_about_place"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:cursorVisible="true"
                        android:focusableInTouchMode="true"
                        android:inputType="text"
                        android:maxLines="20"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:background="@drawable/recycler_shape"
                        android:minLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/add_location_place_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:text="@string/add_location"
                    android:textColor="@color/color1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_add_place_edt" />

                <ImageButton
                    android:id="@+id/add_new_location_place_btn"
                    android:layout_width="150dp"
                    android:layout_height="39dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/button_shape"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:layout_gravity="end"
                    android:paddingBottom="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_location_place_txt"
                    app:srcCompat="@drawable/ic_baseline_add_location_alt_24" />

                <TextView
                    android:id="@+id/add_media_place_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/choose_image"
                    android:textColor="@color/color1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_location_place_btn" />

                <ImageButton
                    android:id="@+id/add_new_media_place_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_shape"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_place_data_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
             />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>