<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.show_data"
    android:background="?attr/background_color">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp"
            app:cardCornerRadius="3dp"
            android:layout_margin="3dp"
            android:layout_marginBottom="20dp"
            app:cardMaxElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="?attr/background_color"
            android:layout_gravity="start"
            android:background="@drawable/recycler_shape"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/user_show_image"
                android:layout_margin="5dp"
                android:scaleType="fitXY"
                >
            </ImageView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/color1"
                >
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:textColor="?attr/textcolor"
                android:gravity="center"
                android:text="@string/city"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:id="@+id/user_show_city"
                    android:textColor="?attr/textcolor"
                    android:gravity="center"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/color1"
                >
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="?attr/textcolor"
                    android:gravity="center"
                    android:text="@string/place_name"/>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:id="@+id/user_show_name"
                    android:textColor="?attr/textcolor"
                    android:gravity="center"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/color1"
                >
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="?attr/textcolor"
                    android:gravity="center"
                    android:text="@string/about_place"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:id="@+id/user_show_about"
                    android:textColor="?attr/textcolor"
                    android:gravity="center"

                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/color1"
                >
            </View>
            <ImageButton
                android:id="@+id/user_show_location"
                android:layout_width="150dp"
                android:layout_height="39dp"
                android:layout_margin="24dp"
                android:background="@drawable/button_shape"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="end"
                android:paddingBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_location_place_txt"
                app:srcCompat="@drawable/ic_baseline_add_location_alt_24" />


        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>